<resources>
    <string name="app_name">SRSYS</string>

    <string name="action_settings">Settings</string>
    <string name="student_records_system">Student Records System</string>
    <string name="title_activity_students">SRSYS: Students</string>
    <string name="title_activity_courses">SRSYS: Courses</string>
    <string name="title_activity_student_courses">SRSYS: Student Course History</string>
    <string name="title_activity_course_students">SRSYS: Course Registrations</string>
    <string name="students">Students</string>
    <string name="courses">Courses</string>
    <string name="registrations">Registrations</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="student_id">Student ID</string>
    <string name="course_id">Course ID</string>
    <string name="gpa">GPA</string>
    <string name="fatalError">Fatal error</string>
    <string name="warning">Warning</string>
    <string name="profile">Profile</string>
    <string name="calendar">Calendar</string>
    <string name="classes">Classes</string>
    <string name="edit">Edit</string>
    <string name="welcome">Welcome To QuizMonkies</string>
    <string name="select">Please Select One Of Our Functions</string>
    <string name="favorite">Favorite:</string>
    <string name="course_name">Course Name</string>
    <string name="course_code">Course Code:</string>
    <string name="sort_by_date_added">Sort By Date Added</string>
    <string name="sort_by_subject">Sort By Subject</string>
    <string name="date_enrolled">Date Enrolled</string>
    <string name="date_ending">Date Ending</string>
    <string name="sort_by_name">Sort By Name</string>
    <string name="sort_by_course_code">Sort By Course Code</string>
    <string name="sort_by_favorites">Sort By Favorites</string>
    <string name="notes">Notes:</string>
    <string name="quiz_cards">Quiz Cards:</string>
    <string name="upcoming_events">Upcoming Events :</string>
    <string name="subject">Subject</string>
    <string name="notes_created">Notes Created:</string>
    <string name="quiz_cards_created">Quiz Cards Created:</string>
    <string name="edit_entry">Edit Entry</string>
    <string name="delete_entry">Delete Entry</string>
    <string name="number_courses_enrolled">Number Courses Enrolled</string>
    <string name="feb_2024">Feb 2024</string>
    <string name="next">next</string>
    <string name="prev">prev</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thur">THUR</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="_1">1</string>
    <string name="did_you_answer_correctly">Did you answer correctly?</string>
    <string name="reveal_answer">Reveal Answer</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="trueString">True</string>
    <string name="falseString">False</string>
    <string name="true_or_false">True or False?</string>
    <string name="mc_prompt">Which is correct?</string>
    <string-array name="quiz_choices">
        <item>Flashcard</item>
        <item>True or False</item>
        <item>Multiple Choice</item>
    </string-array>
</resources>
