<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="comp3350.srsys.presentation.HomePage">

    <ImageView
        android:id="@+id/startImage"
        android:layout_width="512dp"
        android:layout_height="445dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="171dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="200dp"
        android:src="@drawable/quizmonkieslogo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="191dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="900dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="150dp"
        android:gravity="center"
        android:text="@string/welcome" />

    <ToggleButton
        android:id="@+id/profileButton"
        android:layout_width="255dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="1110dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/calendarButton"
        android:text="@string/profile"
        android:textOff="@string/profile"
        android:textOn="@string/profile" />

    <ToggleButton
        android:id="@+id/calendarButton"
        android:layout_width="255dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="1110dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/classesButton"
        android:text="@string/calendar"
        android:textOff="@string/calendar"
        android:textOn="@string/calendar" />

    <ToggleButton
        android:id="@+id/classesButton"
        android:layout_width="255dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="1110dp"
        android:layout_marginBottom="0dp"
        android:text="@string/classes"
        android:textOff="@string/classes"
        android:textOn="@string/classes" />

</RelativeLayout>
