<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="comp3350.srsys.presentation.CalendarInfo">

    <ToggleButton
        android:id="@+id/profileButton"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="650dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/calendarButton"
        android:text="@string/profile"
        android:textOff="@string/profile"
        android:textOn="@string/profile" />

    <ToggleButton
        android:id="@+id/calendarButton"
        android:layout_width="450dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="650dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/classesButton"
        android:checked="true"
        android:text="@string/calendar"
        android:textOff="@string/calendar"
        android:textOn="@string/calendar" />

    <ToggleButton
        android:id="@+id/classesButton"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="650dp"
        android:layout_marginBottom="0dp"
        android:text="@string/classes"
        android:textOff="@string/classes"
        android:textOn="@string/classes" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="485dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="391dp"
        android:layout_marginTop="169dp"
        android:layout_marginEnd="388dp" />

</RelativeLayout>
