<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="comp3350.srsys.presentation.ClassesInfo">

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="300dp"
        android:layout_height="220dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="200dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="700dp"
        android:ems="10"
        android:inputType="text"
        android:text="Class 4" />

    <ToggleButton
        android:id="@+id/profileButton"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="650dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:text="@string/profile"
        android:textOff="@string/profile"
        android:textOn="@string/profile" />

    <ToggleButton
        android:id="@+id/calendarButton"
        android:layout_width="450dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="650dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/classesButton"
        android:text="@string/calendar"
        android:textOff="@string/calendar"
        android:textOn="@string/calendar" />

    <ToggleButton
        android:id="@+id/classesButton"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="650dp"
        android:layout_marginBottom="0dp"
        android:checked="true"
        android:text="@string/classes"
        android:textOff="@string/classes"
        android:textOn="@string/classes" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="300dp"
        android:layout_height="220dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="700dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="200dp"
        android:ems="10"
        android:inputType="text"
        android:text="Class 2" />

    <EditText
        android:id="@+id/editTextText1"
        android:layout_width="300dp"
        android:layout_height="220dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="200dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="700dp"
        android:ems="10"
        android:inputType="text"
        android:text="Class 1" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="300dp"
        android:layout_height="220dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="700dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="200dp"
        android:ems="10"
        android:inputType="text"
        android:text="Class 3" />

</RelativeLayout>
